<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true"
    android:padding="@dimen/standard">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/door"
            style="@style/style5"
            android:adjustViewBounds="true"
            android:contentDescription="@string/door"
            android:scaleType="fitCenter"
            android:src="@drawable/door" />

        <ImageView
            android:id="@+id/logo"
            style="@style/style5"
            android:layout_below="@+id/slogan2"
            android:layout_marginTop="@dimen/standard"
            android:layout_toEndOf="@id/door"
            android:contentDescription="@string/logo"
            android:src="@drawable/udacity_logo3" />

        <TextView
            android:id="@+id/slogan"
            style="@style/style4"
            android:layout_centerHorizontal="true"
            android:text="@string/slogan" />

        <TextView
            android:id="@+id/slogan1"
            style="@style/style4"
            android:layout_below="@id/slogan"
            android:layout_toEndOf="@id/door"
            android:text="@string/slogan1" />

        <TextView
            android:id="@+id/slogan2"
            style="@style/style4"
            android:layout_below="@id/slogan1"
            android:layout_marginStart="@dimen/double_standard"
            android:layout_marginTop="@dimen/standard"
            android:layout_toEndOf="@id/door"
            android:text="@string/slogan2" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/double_standard"
            android:orientation="vertical">

            <LinearLayout
                style="@style/style3"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/idcard"
                    style="@style/style1"
                    android:contentDescription="@string/id"
                    android:scaleType="center"
                    android:src="@drawable/name" />

                <TextView
                    android:id="@+id/name"
                    style="@style/style6"
                    android:text="@string/name"
                    android:textAllCaps="true" />

            </LinearLayout>

            <LinearLayout
                style="@style/style3"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/address"
                    style="@style/style1"
                    android:contentDescription="@string/location"
                    android:scaleType="center"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/data"
                    style="@style/style6"
                    android:autoLink="map"
                    android:text="@string/data"
                    android:textColorLink="@color/colorlink" />

            </LinearLayout>

            <LinearLayout
                style="@style/style3"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/telephone"
                    style="@style/style1"
                    android:contentDescription="@string/number"
                    android:scaleType="center"
                    android:src="@drawable/phone" />

                <TextView
                    android:id="@+id/phone"
                    style="@style/style6"
                    android:autoLink="phone"
                    android:text="@string/phone"
                    android:textColorLink="@color/colorlink" />

            </LinearLayout>

            <LinearLayout
                style="@style/style3"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/www"
                    style="@style/style1"
                    android:contentDescription="@string/webpage"
                    android:scaleType="center"
                    android:src="@drawable/www" />

                <TextView
                    android:id="@+id/webpage"
                    style="@style/style6"
                    android:autoLink="web"
                    android:text="@string/page"
                    android:textColorLink="@color/colorlink" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>